code/HADAD-base/src/main/java/hadad/base/compiler/model/tm/TFMParser.java
// Generated from TFM.g4 by ANTLR 4.4

package hadad.base.compiler.model.tm;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TFMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__31=1, T__30=2, T__29=3, T__28=4, T__27=5, T__26=6, T__25=7, T__24=8, 
		T__23=9, T__22=10, T__21=11, T__20=12, T__19=13, T__18=14, T__17=15, T__16=16, 
		T__15=17, T__14=18, T__13=19, T__12=20, T__11=21, T__10=22, T__9=23, T__8=24, 
		T__7=25, T__6=26, T__5=27, T__4=28, T__3=29, T__2=30, T__1=31, T__0=32, 
		ID=33, WHITESPACE=34, STRING=35, INT=36, MATRIX=37, ROWS=38, COLS=39, 
		READ=40;
	public static final String[] tokenNames = {
		"<INVALID>", "'tf.norm('", "'tf.add('", "'tf.linalg.adjoint('", "'Graph()'", 
		"'tf.reduce_mean('", "'run'", "'{'", "'}'", "'='", "'tf.linalg.matrix_rank('", 
		"'('", "'placeholder'", "','", "'axis=0'", "'global_variables_initializer()'", 
		"'.'", "'tf.linalg.det('", "'import tensorflow as'", "'tf.matmul('", "'tf.divide('", 
		"'tf.math.matmul('", "'tf.linalg.diag('", "':'", "'tf.linalg.trace('", 
		"'tf.transpose('", "'tf.reduce_sum('", "'axis=1'", "'tf.linalg.inv('", 
		"'as_default()'", "')'", "'tf.math.scalar_mul('", "'Session()'", "ID", 
		"WHITESPACE", "STRING", "INT", "MATRIX", "ROWS", "COLS", "READ"
	};
	public static final int
		RULE_tfmQuery = 0, RULE_importstatement = 1, RULE_tfmScript = 2, RULE_tfmStatemnet = 3, 
		RULE_source = 4, RULE_tfmMatrixConstruction = 5, RULE_tfmMatrixConstructionMatrixSource = 6, 
		RULE_sesionRun = 7, RULE_load = 8, RULE_mName = 9, RULE_sep = 10, RULE_tfGraphInit = 11, 
		RULE_val = 12, RULE_shape = 13, RULE_keyVal = 14, RULE_pair = 15, RULE_withStatement = 16, 
		RULE_with = 17, RULE_gName = 18, RULE_as = 19, RULE_sess = 20, RULE_tfmExpression = 21, 
		RULE_viewName = 22, RULE_matrixName = 23, RULE_matrixNameExpression = 24, 
		RULE_numericScalar = 25, RULE_filePath = 26;
	public static final String[] ruleNames = {
		"tfmQuery", "importstatement", "tfmScript", "tfmStatemnet", "source", 
		"tfmMatrixConstruction", "tfmMatrixConstructionMatrixSource", "sesionRun", 
		"load", "mName", "sep", "tfGraphInit", "val", "shape", "keyVal", "pair", 
		"withStatement", "with", "gName", "as", "sess", "tfmExpression", "viewName", 
		"matrixName", "matrixNameExpression", "numericScalar", "filePath"
	};

	@Override
	public String getGrammarFileName() { return "TFM.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TFMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TfmQueryContext extends ParserRuleContext {
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public TfmScriptContext tfmScript() {
			return getRuleContext(TfmScriptContext.class,0);
		}
		public ImportstatementContext importstatement() {
			return getRuleContext(ImportstatementContext.class,0);
		}
		public TfmQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tfmQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterTfmQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitTfmQuery(this);
		}
	}

	public final TfmQueryContext tfmQuery() throws RecognitionException {
		TfmQueryContext _localctx = new TfmQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tfmQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); viewName();
			setState(55); match(T__9);
			setState(56); importstatement();
			setState(57); tfmScript();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportstatementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TFMParser.ID, 0); }
		public ImportstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterImportstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitImportstatement(this);
		}
	}

	public final ImportstatementContext importstatement() throws RecognitionException {
		ImportstatementContext _localctx = new ImportstatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); match(T__14);
			setState(60); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TfmScriptContext extends ParserRuleContext {
		public TfmStatemnetContext tfmStatemnet(int i) {
			return getRuleContext(TfmStatemnetContext.class,i);
		}
		public List<TfmStatemnetContext> tfmStatemnet() {
			return getRuleContexts(TfmStatemnetContext.class);
		}
		public TfmScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tfmScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterTfmScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitTfmScript(this);
		}
	}

	public final TfmScriptContext tfmScript() throws RecognitionException {
		TfmScriptContext _localctx = new TfmScriptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tfmScript);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); tfmStatemnet();
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(63); tfmStatemnet();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TfmStatemnetContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public SesionRunContext sesionRun() {
			return getRuleContext(SesionRunContext.class,0);
		}
		public WithStatementContext withStatement() {
			return getRuleContext(WithStatementContext.class,0);
		}
		public MatrixNameContext matrixName() {
			return getRuleContext(MatrixNameContext.class,0);
		}
		public TfmStatemnetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tfmStatemnet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterTfmStatemnet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitTfmStatemnet(this);
		}
	}

	public final TfmStatemnetContext tfmStatemnet() throws RecognitionException {
		TfmStatemnetContext _localctx = new TfmStatemnetContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tfmStatemnet);
		try {
			setState(75);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69); matrixName();
				setState(70); match(T__23);
				setState(71); source();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73); withStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74); sesionRun();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public TfmMatrixConstructionContext tfmMatrixConstruction() {
			return getRuleContext(TfmMatrixConstructionContext.class,0);
		}
		public TfmExpressionContext tfmExpression() {
			return getRuleContext(TfmExpressionContext.class,0);
		}
		public TfGraphInitContext tfGraphInit() {
			return getRuleContext(TfGraphInitContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_source);
		try {
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77); tfmMatrixConstruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78); tfmExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79); tfGraphInit();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TfmMatrixConstructionContext extends ParserRuleContext {
		public TfmMatrixConstructionMatrixSourceContext tfmMatrixConstructionMatrixSource() {
			return getRuleContext(TfmMatrixConstructionMatrixSourceContext.class,0);
		}
		public TfmMatrixConstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tfmMatrixConstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterTfmMatrixConstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitTfmMatrixConstruction(this);
		}
	}

	public final TfmMatrixConstructionContext tfmMatrixConstruction() throws RecognitionException {
		TfmMatrixConstructionContext _localctx = new TfmMatrixConstructionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tfmMatrixConstruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); tfmMatrixConstructionMatrixSource();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TfmMatrixConstructionMatrixSourceContext extends ParserRuleContext {
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public TfmMatrixConstructionMatrixSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tfmMatrixConstructionMatrixSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterTfmMatrixConstructionMatrixSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitTfmMatrixConstructionMatrixSource(this);
		}
	}

	public final TfmMatrixConstructionMatrixSourceContext tfmMatrixConstructionMatrixSource() throws RecognitionException {
		TfmMatrixConstructionMatrixSourceContext _localctx = new TfmMatrixConstructionMatrixSourceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tfmMatrixConstructionMatrixSource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); load();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SesionRunContext extends ParserRuleContext {
		public List<KeyValContext> keyVal() {
			return getRuleContexts(KeyValContext.class);
		}
		public List<TerminalNode> ID() { return getTokens(TFMParser.ID); }
		public KeyValContext keyVal(int i) {
			return getRuleContext(KeyValContext.class,i);
		}
		public TerminalNode ID(int i) {
			return getToken(TFMParser.ID, i);
		}
		public SesionRunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sesionRun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterSesionRun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitSesionRun(this);
		}
	}

	public final SesionRunContext sesionRun() throws RecognitionException {
		SesionRunContext _localctx = new SesionRunContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sesionRun);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(ID);
			setState(87); match(T__16);
			setState(88); match(T__26);
			setState(89); match(T__21);
			setState(90); match(ID);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__19) {
				{
				{
				setState(91); match(T__19);
				setState(92); match(ID);
				setState(93); match(T__23);
				setState(94); keyVal();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TFMParser.ID, 0); }
		public TerminalNode STRING() { return getToken(TFMParser.STRING, 0); }
		public MNameContext mName() {
			return getRuleContext(MNameContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public LoadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitLoad(this);
		}
	}

	public final LoadContext load() throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_load);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(ID);
			setState(103); match(T__21);
			setState(104); mName();
			setState(105); match(T__19);
			setState(106); sep();
			setState(107); match(T__23);
			setState(108); match(STRING);
			setState(109); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MNameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(TFMParser.STRING, 0); }
		public MNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterMName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitMName(this);
		}
	}

	public final MNameContext mName() throws RecognitionException {
		MNameContext _localctx = new MNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SepContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TFMParser.ID, 0); }
		public SepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterSep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitSep(this);
		}
	}

	public final SepContext sep() throws RecognitionException {
		SepContext _localctx = new SepContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sep);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TfGraphInitContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(TFMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TFMParser.ID, i);
		}
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public TfGraphInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tfGraphInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterTfGraphInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitTfGraphInit(this);
		}
	}

	public final TfGraphInitContext tfGraphInit() throws RecognitionException {
		TfGraphInitContext _localctx = new TfGraphInitContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tfGraphInit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(ID);
			setState(116); match(T__16);
			setState(117);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__28) | (1L << T__20) | (1L << T__17))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(126);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(118); match(T__21);
				setState(119); match(ID);
				setState(120); match(T__19);
				setState(121); match(ID);
				setState(122); match(T__23);
				setState(123); val();
				setState(124); match(T__2);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValContext extends ParserRuleContext {
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public ValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitVal(this);
		}
	}

	public final ValContext val() throws RecognitionException {
		ValContext _localctx = new ValContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_val);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); shape();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShapeContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(TFMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TFMParser.ID, i);
		}
		public ShapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterShape(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitShape(this);
		}
	}

	public final ShapeContext shape() throws RecognitionException {
		ShapeContext _localctx = new ShapeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_shape);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(ID);
			setState(131); match(T__16);
			setState(132); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyValContext extends ParserRuleContext {
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public KeyValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterKeyVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitKeyVal(this);
		}
	}

	public final KeyValContext keyVal() throws RecognitionException {
		KeyValContext _localctx = new KeyValContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_keyVal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); match(T__25);
			setState(135); pair();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__19) {
				{
				{
				setState(136); match(T__19);
				setState(137); pair();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143); match(T__24);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(TFMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TFMParser.ID, i);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TFMListener ) ((TFMListener)listener).exitPair(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); match(ID);
			setState(146); match(T__9);
			setState(147); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
